k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: movies
  name: movie-ui
  labels:
    app: movie-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-ui
  template:
    metadata:
      labels:
        app: movie-ui
    spec:
      containers:
        - name: smx
          image: modeseven/movie-ui:0.1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: movies
  name: movie-ui
spec:
  selector:
    app: movie-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: movies
  name: movie-api
  labels:
    app: movie-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-api
  template:
    metadata:
      labels:
        app: movie-api
    spec:
      containers:
        - name: movie-api
          image: modeseven/movie-api:0.1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: movies
  name: movie-api
spec:
  selector:
    app: movie-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "movies"
  name: "movies-ingress"
spec:
  rules:
  - host: "movies.192.168.1.150.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
            service: 
                name: "movie-ui"
                port:
                   number: 80
      - pathType: Prefix
        path: "/api"
        backend:
            service: 
                name: "movie-api"
                port:
                   number: 8080
